fixing every admin page of scroling issue in bg image leaves white spaced below

--- a/public/css/user/nav_nologin.css
+++ b/public/css/user/nav_nologin.css
@@ -58,6 +58,7 @@
     background-color: #A6855D;
     display: flex;
     height: 70px;
+    padding: 10px;
     transition: background-color .3s ease-in-out;
 }
 
